2008-01-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Bump up to 0.530, as we require trunk

	* Makefile.PL: Require clutter-core 0.5.3

	* examples/custom-actor.pl: Fix SYNOPSIS.

	* t/ClutterBehaviourScale.t: Test the new Clutter::BehaviourScale
	accessors

	* xs/ClutterEffect.xs:
	* xs/ClutterBehaviourScale.xs: Update after the upstream API
	change in ClutterBehaviourScale and clutter_effect_scale()

	* xs/ClutterModel.xs: Use clutter_model_insertv() instead of
	calling clutter_model_insert_value().

2008-01-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* t/ClutterModel.t: Update test suite.

2008-01-09  Emmanuele Bassi  <ebassi@openedhand.com>

	reviewed by: <delete if not using a buddy>

	* Clutter.pm: Bump up to 0.510 as we require the 0.5.1 release

	* README:
	* Makefile.PL: Update Clutter requirements

	* MANIFEST:
	* maps:
	* xs_files: s/ClutterModelDefault/ClutterListModel/

	* xs/ClutterListModel.xs: Update wrapper after rename

2008-01-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Post-release bump to 0.501

2008-01-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* NEWS:
	* README: Release 0.500

2008-01-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* examples/custom-actor.pl: Add a ::clicked signal and the
	event handling marshallers to emit it.

2008-01-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterActor.xs: Fix documentation

	* xs/ClutterTypes.xs: Add more documentation for the ::Color
	and ::ActorBox perldoc pages; add the convenience functions:

	  Clutter::ActorBox::origin
	  Clutter::ActorBox::size
	
	for getting the origin and the size of and actor box.

2008-01-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* MANIFEST: Add the new custom actor example

	* examples/custom-actor.pl: Custom actor example; show how to
	subclass Clutter::Actor and override key methods. Requires
	the OpenGL module installed.

	* xs/ClutterActor.xs: Fix a lot of bugs in the overridable